about and methodology

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,7 +2,7 @@
 
 :root {
   /* Colors */
-  --color-primary: #ff5024;
+  --color-primary: #f76a23;
   --color-accent: #ff8d28;
   --color-warm-100: #ffe9c5;
   --color-warm-200: #c95d10;
