--- a/app/(site)/about/hero-style.css
+++ b/app/(site)/about/hero-style.css
@@ -1,6 +1,6 @@
 .page-bg {
   background-image: url("/Bg.png");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-position: 100% 0%;
+  background-size: cover;
+  background-position: right center;
 }
